<resources>
    <string name="app_name">To Do List</string>

    <!--MAIN ACTIVITY-->
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>

    <!--ACTIVITY REGISTER-->
    <string name="createAccount">Create an account</string>
    <string name="nameEt">Name</string>
    <string name="emailEt">Email</string>
    <string name="passwordEt">Password</string>
    <string name="confirmEt">Confirm Password</string>
    <string name="registerUser">Register User</string>
    <string name="alreadyHaveAccount">Already have an account? Log in</string>

    <!--LOGIN ACTIVITY-->
    <string name="signIn">Sign In</string>
    <string name="emailLogin">Email</string>
    <string name="passwordLogin">Password</string>
    <string name="bt_login">Log in</string>
    <string name="newUser">Don\'t have an account? Register</string>
    <string name="incorrect_data">Incorrect data</string>

    <!--MAIN MENU-->
    <string name="signOut">Sign Out</string>
    <string name="welcomeMain">Welcome</string>
    <string name="namesMain"> -- </string>
    <string name="emailMain"> -- </string>

    <!--ADD NOTE-->
    <string name="uid_user">User UID</string>
    <string name="user_email">User email</string>
    <string name="actual_date_time">Actual date and time</string>
    <string name="Title">Title</string>
    <string name="Description">Desctiption</string>
    <string name="btn_calendar">Calendar</string>
    <string name="Date">00/00/0000</string>
    <string name="State">Not finished</string>

</resources>