<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.Register">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:text="@string/createAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/worksans"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_marginTop="10dp"/>

        <!--Animation-->
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="register.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <EditText
                android:id="@+id/nameEt"
                android:hint="@string/nameEt"
                android:inputType="textPersonName|textCapWords"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/worksans"
                android:drawableStart="@drawable/ic_names"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <EditText
                android:id="@+id/emailEt"
                android:hint="@string/emailEt"
                android:inputType="textEmailAddress"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/worksans"
                android:drawableStart="@drawable/ic_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">
            <EditText
                android:id="@+id/passwordEt"
                android:hint="@string/passwordEt"
                android:inputType="textPassword"
                android:padding="20dp"
                android:paddingEnd="60dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/worksans"
                android:drawableStart="@drawable/ic_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">
            <EditText
                android:id="@+id/confirmEt"
                android:hint="@string/confirmEt"
                android:inputType="textPassword"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:paddingEnd="60dp"
                android:fontFamily="@font/worksans"
                android:drawableStart="@drawable/ic_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/bt_registerUser"
            android:text="@string/registerUser"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/worksans"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/alreadyHaveAccount"
            android:text="@string/alreadyHaveAccount"
            android:fontFamily="@font/worksans"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>