<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center">

    <!--Animation-->
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="calendario.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:fontFamily="@font/worksans"
            android:textSize="30sp"
            android:layout_marginTop="15dp"/>

        <!--LOGIN BUTTON-->
        <Button
            android:id="@+id/btn_login"
            android:text="@string/btn_login"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:fontFamily="@font/worksans"
            android:layout_width="match_parent"
            android:layout_height="60dp"/>

        <!--REGISTER BUTTON-->
        <Button
            android:id="@+id/btn_register"
            android:text="@string/btn_register"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:fontFamily="@font/worksans"
            android:layout_width="match_parent"
            android:layout_height="60dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>