<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            app:cardBackgroundColor="@color/primaryDarkered"
            app:cardUseCompatPadding="true"
            android:padding="0.2dp"
            app:cardCornerRadius="5dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">

                <TextView
                    android:text="@string/welcomeMain"
                    android:textColor="@color/white"
                    android:fontFamily="@font/worksans"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ProgressBar
                    android:id="@+id/progressBarDataMain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center" />

                <!--NAMES-->
                <TextView
                    android:id="@+id/namesMain"
                    android:visibility="gone"
                    android:text="@string/namesMain"
                    android:textColor="@color/white"
                    android:fontFamily="@font/worksans"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <!--EMAIL-->
                <TextView
                    android:id="@+id/emailMain"
                    android:visibility="gone"
                    android:text="@string/emailMain"
                    android:textColor="@color/white"
                    android:fontFamily="@font/worksans"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.cardview.widget.CardView>
        
        <Button
            android:id="@+id/bt_signOut"
            android:text="@string/signOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        
        


    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>